--- a/assets/settings.json
+++ b/assets/settings.json
@@ -1,1 +1,1 @@
-{"movetype": "Перетаскивание", "gamemode": "Стандартный", "show_footer": "True", "show_header": "True", "card_back": "dark_back", "canvas_color": "#0d4b34"}
+{"movetype": "Перетаскивание", "gamemode": "Тренировочный", "show_footer": "True", "show_header": "True", "card_back": "light_back", "canvas_color": "#0d4b34"}
